--- a/mega-sena-backend/tsconfig.json
+++ b/mega-sena-backend/tsconfig.json
@@ -1,12 +1,16 @@
 {
     "compilerOptions": {
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
       "target": "ES6",
       "module": "commonjs",
-      "rootDir": "src",
-      "outDir": "dist",
       "strict": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*.ts"]
+    "include": [
+      "src/**/*"
+    ]
   }
   
