--- a/mega-sena-backend/package.json
+++ b/mega-sena-backend/package.json
@@ -18,6 +18,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
     "@types/reflect-metadata": "^0.1.0",
