--- a/mega-sena-backend/package.json
+++ b/mega-sena-backend/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "celebrate": "^15.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "joi": "^17.13.3",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
