--- a/mega-sena-backend/package.json
+++ b/mega-sena-backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "celebrate": "^15.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "joi": "^17.13.3",
@@ -21,6 +22,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
